--- a/cs4760progassign/grails-app/assets/stylesheets/application.css
+++ b/cs4760progassign/grails-app/assets/stylesheets/application.css
@@ -7,9 +7,13 @@
 * You're free to add application-wide styles to this file and they'll appear at the top of the
 * compiled file, but it's generally better to create a new file per style scope.
 *
+/*
+...
+
 *= require bootstrap
 *= require grails
 *= require main
 *= require mobile
+<strong>*= require myStyles</strong>
 *= require_self
 */
